--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -393,7 +393,7 @@ function myCollectionList(){
     	$(".grid").append(html);
     	masonryLayout();
     }else{
-		modalAlertShow("검색 결과가 없습니다.");
+		modalAlertShow("등록된 소장품이 없습니다.");
     }
 }
 //거래 남은 시간 1초마다 계산해서 표현하기
