--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -331,7 +331,7 @@ function myWorkList(){
 		//$("#masonryList").append(html);
 		masonryLayout();
     }else{
-		modalAlertShow("검색 결과가 없습니다.");
+		modalAlertShow("등록 된 작품이 없습니다.");
     }
      
 }
