SNS 로그인 경로 수정

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -55,7 +55,7 @@
 <!-- 	<script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script> -->
 	<script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/decoupled-document/ckeditor.js"></script>
 	<link rel="stylesheet" href="resources/css/content-styles.css" type="text/css">
-	
+	<meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
 	
     
     <style type="text/css">
@@ -696,9 +696,10 @@ function changePasswrd(){
 					<div class="login-lk">
 						<p>소셜아이디로 간편하게 로그인할 수 있습니다.</p> 
 						<div class="ll-img">
-							<a href="javascript:fnModalAlert();"><img src="resources/img/icon-naver.png" /></a>
-							<a href="javascript:fnModalAlert();"><img src="resources/img/icon-kaka.png" /></a>
-							<a href="javascript:fnModalAlert();"><img src="resources/img/icon-google.png" /></a>
+							<a href="javascript:naverUserLogin();"><img src="resources/img/icon-naver.png"/></a>
+							<a href="javascript:kakaoUserLogin();"><img src="resources/img/icon-kaka.png" /></a>
+							<a href="javascript:googleUserLogin();"><img src="resources/img/icon-google.png" /></a>
+							
 						</div>
 					</div>
 				</div>
