구글 SNS로그인 위한 태그 추가

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -11,6 +11,8 @@
 				width:235px;
 	    	};
     </style>
+    
+    <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
 </head>
 <body>
 	<div class="wrap">
