--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -57,7 +57,8 @@
 	<link rel="stylesheet" href="resources/css/content-styles.css" type="text/css">
 	<meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
 	
-    
+    <!-- chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
     <style type="text/css">
 		.modal-open {
 		  overflow:hidden;
